@@ -11,9 +11,8 @@ android {
 
     defaultConfig {
         minSdk = 31
-
         testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
-        consumerProguardFiles("consumer-rules.pro")
+                consumerProguardFiles("consumer-rules.pro")
     }
 
     buildTypes {
@@ -34,6 +33,11 @@ android {
     }
 }
 
+tasks.withType<Test> {
+    jvmArgs("-XX:+EnableDynamicAgentLoading")
+    useJUnitPlatform()
+}
+
 dependencies {
     implementation(project(":common"))
     implementation(project(":core:domain"))
@@ -45,7 +49,7 @@ dependencies {
 
     implementation(libs.androidx.navigation.fragment.ktx)
 
-    implementation (libs.compose)
+    implementation(libs.compose)
 
     implementation (libs.timber)
 
@@ -65,5 +69,15 @@ dependencies {
     implementation(libs.androidx.ui.tooling.preview)
     implementation(libs.androidx.material3)
     debugImplementation(libs.ui.tooling)
+
+    testImplementation(libs.junit.jupiter)
+    testImplementation(kotlin("test"))
+
+    testImplementation(libs.mockk)
+    testImplementation(libs.mockk.android)
+
+    testRuntimeOnly(libs.junit.jupiter.engine)
+
+    testImplementation(libs.kotlinx.coroutines.test)
 
 }
